--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2003-08-08  Kean Johnston  <jkj@sco.com>
+
+	* configure.in (sco3.2v5*): Enable building of libgcj
+
+2003-08-04  Release Manager
+
+	* GCC 3.3.1 Released.
+
+2003-08-03  Richard Stallman  <rms@gnu.org>
+            Eben Moglen  <moglen@columbia.edu>
+
+	* README.SCO: New file.
+
 2003-07-13  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* MAINTAINERS: Alphabetize.
