--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,198 @@
+2003-08-11  Dale Johannesen  <dalej@apple.com>
+	* config/rs6000/rs6000.md (ctrsi, ctrdi):  Reenable handling of
+	decrement-and-branch farther away than 32 bits.
+
+2003-08-10  Zack Weinberg  <zack@codesourcery.com>
+
+	Backport the following changes from mainline:
+
+    2003-05-08  David Mosberger <davidm@hpl.hp.com>
+
+	* unwind-libunwind.c (_Unwind_FindEnclosingFunction): New.
+
+    2003-04-03  Richard Henderson  <rth@redhat.com>
+
+	* unwind-libunwind.c (_Unwind_GetCFA): New.
+
+    2003-03-27  David Mosberger <davidm@hpl.hp.com>
+
+	* unwind-libunwind.c (uw_frame_state_for): Adjust for libunwind
+	v0.9 API change: replace read of UNW_REG_HANDLER with
+	unw_get_proc_info().
+	(_Unwind_GetLanguageSpecificData): Replace read of UNW_REG_LSDA
+	with unw_get_proc_info().
+	(_Unwind_GetRegionStart): Replace UNW_REG_PROC_START with
+	unw_get_proc_info().
+
+    2003-03-13  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* unwind-libunwind.c: Replace "GNU CC" with "GCC".
+
+    2002-10-02  David Mosberger-Tang  <David.Mosberger@acm.org>
+
+	* config/t-libunwind: Mention unwind-sjlj.c.
+	* unwind-libunwind.c: Change #ifdef __USING_LIBUNWIND_EXCEPTIONS__
+	to #ifndef __USING_SJLJ_EXCEPTIONS__.
+
+	* configure.in: Move sjlj-exceptions and --enable-libunwind-exceptions
+	before inclusion of config.gcc, but after configuring the compiler etc.
+	Determine default value for --enable-libunwind-exceptions based on
+	whether the host has a libunwind library (not guaranteed to be correct,
+	but it's a reasonable first guess and can always be overridden with an
+	explicit --enable/disable-libunwind-exceptions.
+	* config.gcc: For target ia64*-*-linux*, mention t-libunwind as a
+	tmake_file when $use_libunwind_exceptions is enabled.
+	* Makefile.in: Update comment: LIB2ADDEH is updated not just by
+	ia64 (e.g., config/t-linux also updates it).
+	* gcc.c (init_spec) [USE_LIBUNWIND_EXCEPTIONS]: Mention -lunwind
+	along with the shared version of libgcc since the latter requires
+	the former.
+
+	* unwind-libunwind.c: New file.
+	* config/t-libunwind: Ditto.
+
+2003-08-10  Richard Henderson  <rth@redhat.com>
+
+	PR target/11693
+	* config/ia64/ia64.c (ia64_emit_nops): Skip L slots when
+	padding before inline assembly.
+
+2003-08-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR c++/11712
+	* pa-hpux.h, pa-hpux10.h, pa-hpux11.h (TARGET_OS_CPP_BUILTINS): Define
+	__STDC_EXT__ when using C++ dialect.
+
+2003-08-08  Kean Johnston  <jkj@sco.com>
+
+	PR target/9877
+	PR target/8336
+	* config.gcc (sco3.2v5*): Use elfos.h and dbxelf.h in tm_file;
+	Eliminate need for t-sco5gas target fragment.
+	No longer build crt{begin,end}S.o, that were used for COFF support.
+	* tlink.c (recompile_files): Add missing = in putenv() calls.
+	* unwind-dw2.c (_Unwind_GetCFA): Correct return cast.
+	* config/i386/sco5.h: Major overhaul to remove all COFF support
+	* config/i386/t-sco5: Multilib for PIC support
+	* config/i386/t-sco5gas: Remove
+	* config/i386/i386.c: Check value as well as presence of
+	SUPPORTS_ONE_ONLY
+	* doc/install.texi: Update for modern SCO instructions
+	* fixinc/check.tpl: Allow user to specify diff program for make check
+	* fixinc/inclhack.def: Fix several SCO header files, namely string.h,
+	math.h, sys/byteorder.h and sys/regset.h.
+	* fixinc/fixincl.x: Regenerate
+	* fixinc/tests/base/math.h: Update
+	* fixinc/tests/base/sys/byteorder.h: Update
+	* fixinc/tests/base/string.h: Added
+	* fixinc/tests/base/sys/regset.h: Added
+	* testsuite/gcc.dg/nest.c: Allow failure on SCO (-pg not supported)
+
+2003-08-08  Roger Sayle  <roger@eyesopen.com>
+
+	PR c/11370
+	* calls.c (emit_call_1): Don't bother popping the arguments off of
+	the stack after a noreturn function call;  The adjustment is dead.
+	(expand_call): Likewise.
+
+2003-08-08  SUGIOKA Toshinobu  <sugioka@itonet.co.jp>
+
+	* config.gcc: Do not override sh/t-linux with sh/t-le.
+
+2003-08-08  Kaz Kojima  <kkojima@gcc.gnu.org>
+
+	* config/sh/linux.h (SUBTARGET_LINK_SPEC): Don't set rpath.
+	(LIB_SPEC): Set -lpthread always when -pthread set.  Set -lieee
+	when -mieee-fp set and -shared not set.
+
+2003-08-08  Richard Henderson  <rth@redhat.com>
+
+	PR target/11535
+	* config/ia64/ia64.c (ia64_initial_elimination_offset): Remove
+	RETURN_ADDRESS_POINTER_REGNUM.
+	(ia64_expand_prologue): Don't frob it.
+	(ia64_output_function_epilogue): Likewise.
+	(ia64_return_addr_rtx): New.
+	(ia64_split_return_addr_rtx): New.
+	* config/ia64/ia64-protos.h: Update.
+	* config/ia64/ia64.h (FIRST_PSEUDO_REGISTER): Decrement.
+	(RETURN_ADDRESS_POINTER_REGNUM): Remove.
+	(GENERAL_REGNO_P): Don't check it.
+	(AR_*_REGNUM): Renumber.
+	(FIXED_REGISTERS): Remove RETURN_ADDRESS_POINTER_REGNUM.
+	(CALL_USED_REGISTERS, CALL_REALLY_USED_REGISTERS): Likewise.
+	(REG_ALLOC_ORDER, REG_CLASS_CONTENTS): Likewise.
+	(ELIMINABLE_REGS, REGISTER_NAMES): Likewise.
+	(RETURN_ADDR_RTX): Use ia64_return_addr_rtx.
+	* config/ia64/ia64.md (UNSPEC_RET_ADDR): New.
+	(movdi_ret_addr): New.
+
+2003-08-03  Geoffrey Keating  <geoffk@apple.com>
+
+	PR 11709
+	* varasm.c (output_constant_def_contents): Use
+	ASM_DECLARE_CONSTANT_NAME if defined.
+	* doc/tm.texi (Label Output): Document ASM_DECLARE_CONSTANT_NAME.
+	* config/darwin.h (ASM_DECLARE_OBJECT_NAME): Ensure zero-sized
+	objects get at least one byte to prevent assembler problems.
+	(ASM_DECLARE_CONSTANT_NAME): New.
+
+2003-08-07  Mark Mitchell  <mark@codesourcery.com>
+
+	* version.c (version_string): Reset to prerelease.
+	* doc/include/gcc-common.texi: Update version.
+
+2003-08-04  Release Manager
+
+	* GCC 3.3.1 Released.
+
+2003-08-03  Neil Booth  <neil@daikokuya.co.uk>
+
+	PR preprocessor/11534
+	* cppexp.c (parse_defined): Warn only if -pedantic.
+
+2003-08-03  Mark Mitchell  <mark@codesourcery.com>
+
+	* Makefile.in (ORDINARY_FLAGS_TO_PASS): Pass AR.
+
+	* Makefile.in (STAGE2_FLAGS_TO_PASS): Pass AR_FOR_TARGET and
+	RANLIB_FOR_TARGET.
+	(stage1_build): Likewise.
+
+2003-08-03  Jan Hubicka  <jh@suse.cz>
+
+	PR 10510
+	* config/pa/pa.h (MAYBE_FP_REG_CLASS_P): New.
+	(SECONDARY_MEMORY_NEEDED): Use it.
+
+2003-08-01  Geoffrey Keating  <geoffk@apple.com>
+
+	PR 11709 (partial fix)
+	* config/rs6000/rs6000.c (rs6000_output_function_epilogue): Don't
+	insert a label at the end of an function under Mach-O.
+
+	PR 11313
+	* c-pragma.c (maybe_apply_pragma_weak): Don't get DECL_ASSEMBLER_NAME
+	when it's not needed.
+
+2003-07-29  Richard Henderson  <rth@redhat.com>
+
+	PR target/10681
+
+	2003-06-27  J"orn Rennecke <joern.rennecke@superh.com>
+	* flow.c (propagate_one_insn): Use proper test for a register
+	being part of the return value.
+
+	2003-06-26  Richard Henderson  <rth@redhat.com>
+	* flow.c (propagate_one_insn): Preserve live-at-end registers
+	across tail calls.
+
+	2003-06-26  Richard Henderson  <rth@redhat.com>
+	* config/ia64/ia64.c (ia64_expand_call): Don't add ar.pfs for sibcalls.
+	(ia64_split_call): Only load descriptor for GP register inputs.
+	(ia64_expand_epilogue): Check current_frame_info.mask not
+	current_function_is_leaf to restore ar.pfs.
+
 2003-08-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* cfgcleanup.c (outgoing_edges_match): Check REG_EH_REGION notes
@@ -75,15 +270,15 @@
 	Backport the folling patch.
 
 	2003-04-01  Aldy Hernandez  <aldyh@redhat.com>
-         
-        PR/8878
-        * expr.c (expand_expr): Handle VECTOR_CST.
-        (const_vector_from_tree): New.
-         
-        * varasm.c (output_constant): Handle VECTOR_CST.
-         
-        * c-typeck.c (digest_init): Build a vector constant from a
-        VECTOR_TYPE.
+
+	PR/8878
+	* expr.c (expand_expr): Handle VECTOR_CST.
+	(const_vector_from_tree): New.
+
+	* varasm.c (output_constant): Handle VECTOR_CST.
+
+	* c-typeck.c (digest_init): Build a vector constant from a
+	VECTOR_TYPE.
 
 2003-07-23  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
@@ -94,11 +289,11 @@
 
 	PR optimization/10679
 	* tree-inline.c (inlinable_function_p): Honor MIN_INLINE_INSNS.
-	
+
 2003-07-22  Bob Wilson  <bob.wilson@acm.org>
-	
+
 	* unwind-c.c (PERSONALITY_FUNCTION): Delete duplicate define.
-	
+
 2003-07-23  Dave Fluri  <dave.fluri@onlink.net>
 
 	* doc/extend.texi: Fixes to spelling, grammar, and diction.
@@ -110,7 +305,7 @@
 
 2003-07-17  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
-        PR optimization/11536
+	PR optimization/11536
 	* unroll.c (loop_iterations): Do not replace a register holding
 	the final value by its equivalent before the loop if it is not
 	invariant.
@@ -165,7 +360,7 @@
 	if the predicate doesn't satisfy.
 	(gen_cond_trap): Allow prepare_operand to fail.
 	Pass correct opnum argument to prepare_operand.
-	
+
 2003-07-18  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR optimization/11083
@@ -181,7 +376,7 @@
 2003-07-17  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	PR bootstrap/11043
-	* config/arc/t-arc: Replace bogus references to "x-crtinit.o", 
+	* config/arc/t-arc: Replace bogus references to "x-crtinit.o",
 	"x-crtfini.o" with "crtinit.o", "crtfini.o".
 
 2003-07-17  Eric Botcazou  <ebotcazou@libertysurf.fr>
@@ -196,7 +391,7 @@
 	* doc/invoke.texi (SPARC Options): Document "-mimpure-text".
 
 2003-07-17  Eric Botcazou <ebotcazou@libertysurf.fr>
-            Phil Edwards <phil@jaj.com>
+	    Phil Edwards <phil@jaj.com>
 
 	* doc/install.texi (*-*-solaris2*): Document the step-by-step
 	procedure to bootstrap and install.
@@ -206,9 +401,9 @@
 2003-07-16  Richard Henderson  <rth@redhat.com>
 
 	PR target/10907
-        * config/ia64/ia64.c (ia64_epilogue_uses): GP is live at end
-        even with !TARGET_CONST_GP.
-        (ia64_function_ok_for_sibcall): Reject non-local functions.
+	* config/ia64/ia64.c (ia64_epilogue_uses): GP is live at end
+	even with !TARGET_CONST_GP.
+	(ia64_function_ok_for_sibcall): Reject non-local functions.
 
 2003-07-15  Geoffrey Keating  <geoffk@apple.com>
 
@@ -512,7 +707,7 @@
 	* loop.c (loop_iv_add_mult_emit_before): Call loop_regs_update before
 	loop_insn_emit_before.
 	(loop_iv_add_mult_sink, loop_iv_add_mult_hoist): Likewise.
-	
+
 2003-07-10  Dara Hazeghi  <dhazeghi@yahoo.com>
 
 	PR bootstrap/10758
@@ -583,8 +778,8 @@
 
 2003-07-07  Dale Johannesen <dalej@apple.com>
 
-        PR 10900
-        * config/rs6000/darwin-tramp.asm:  Fix trampolines.
+	PR 10900
+	* config/rs6000/darwin-tramp.asm:  Fix trampolines.
 
 2003-07-07 Andrew Pinski <pinskia@physics.uc.edu>
 
@@ -598,7 +793,7 @@
 	(-falign-jumps): Likewise.
 
 2003-07-07  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
-            Eric Botcazou  <ebotcazou@libertysurf.fr>
+	    Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR optimization/11198
 	* alias.c (objects_must_conflict_p): Return 1 if the types have
@@ -4884,7 +5079,7 @@ Mon Apr  7 15:56:30 CEST 2003  Jan Hubicka  <jh@suse.cz>
 	* df.c (df_uses_record): Handle CC0.
 
 2003-01-25  Jan Hubicka  <jh@suse.cz>
-            Eric Botcazou <ebotcazou@libertysurf.fr>
+	    Eric Botcazou <ebotcazou@libertysurf.fr>
 
 	PR opt/8492
 	* gcse.c (one_cprop_pass): Delete unreachable blocks.
