--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2003-08-08  Kean Johnston  <jkj@sco.com>
+
+	* java/io/natFilePosix.cc: HAVE_READDIR_R is broken on SCO. Undefine.
+	  If MAXPATHLEN is not defined by the system, define it.
+	* java/io/natFileDescriptorPosix.cc: Ditto.
+
+2003-08-04  Release Manager
+
+	* GCC 3.3.1 Released.
+
 2003-07-11  Michael Koch  <konqueror@gmx.de>
 
 	* gnu/gcj/convert/natIconv.cc
@@ -101,14 +111,6 @@
 2003-01-24  Jakub Jelinek  <jakub@redhat.com>
 
 	* include/x86_64-signal.h: Add -m32 support.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
 
 2003-05-13  Release Manager
 
