--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,19 @@
+2003-08-11  Andreas Jaeger  <aj@suse.de>
+
+	* include/Makefile.am (stamp-c_base): Add dependency on stamp-bits
+	to make SMP-safe.
+	* include/Makefile.in: Regenerated.
+
+2003-08-07  Bernardo Innocenti  <bernie@develer.com>
+
+	PR libstdc++/11784
+	* libstdc++-v3/config/cpu/m68k/atomicity.h (__exchange_and_add):
+	Replace variants with new BSET-based version.
+	
+2003-08-04  Release Manager
+
+	* GCC 3.3.1 Released.
+
 2003-07-24  Nathan Myers  <ncm-nospam@cantrip.org>
 
         * testsuite/23_containers/map_operators.cc: Conform to 
