--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,12 @@
+2003-08-08  Mark Mitchell  <mark@codesourcery.com>
+
+	* gcc_release: Correct logic for updating version.c.  Put
+	prereleases into a subdirectory.
+
+2003-08-04  Release Manager
+
+	* GCC 3.3.1 Released.
+
 2003-06-29  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
 	* gcc_release: Command "all" now creates .bz2 files only for
