backport: gcse.c (gmalloc): Fix last change.
Merge from trunk.

	2003-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcse.c (gmalloc): Fix last change.

	2003-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* gcse.c (gmalloc): Argument is a size_t.  Add ATTRIBUTE_MALLOC.
	(grealloc): Size argument is a size_t.
	(gcalloc): New function.  Use throughout in lieu of
	gmalloc/memset.

From-SVN: r70411

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2003-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcse.c (gmalloc): Fix last change.
+
+2003-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcse.c (gmalloc): Argument is a size_t.  Add ATTRIBUTE_MALLOC.
+	(grealloc): Size argument is a size_t.
+	(gcalloc): New function.  Use throughout in lieu of
+	gmalloc/memset.
+
 2003-08-11  Bob Wilson  <bob.wilson@acm.org>
 
 	* config/xtensa/lib2funcs.S: Fix whitespace.
