[Compile-server will need to separate one-time and once-per-output-file backend initialization.]
	[Compile-server will need to separate one-time and once-per-output-file
	backend initialization.]
	* regclass.c (init_reg_modes):  Make non-static.
	Rename to init_reg_modes_once per new naming convention.
	(init_regs):  Don't call init_reg_modes here.
	* emit-rtl.c (init_emit_once):  Call init_reg_modes_once here instead.
	* rtl.h (init_reg_modes_once):  New declaration.
	* toplev.c (backend_init):  Call init_regs after init_emit_once.

From-SVN: r70420

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2003-08-13  Per Bothner  <pbothner@apple.com>
+
+	[Compile-server will need to separate one-time and once-per-output-file
+	backend initialization.]
+	* regclass.c (init_reg_modes):  Make non-static.
+	Rename to init_reg_modes_once per new naming convention.
+	(init_regs):  Don't call init_reg_modes here.
+	* emit-rtl.c (init_emit_once):  Call init_reg_modes_once here instead.
+	* rtl.h (init_reg_modes_once):  New declaration.
+	* toplev.c (backend_init):  Call init_regs after init_emit_once.
+
 2003-08-11  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcse.c (gmalloc): Fix last change.
