--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,7 +1,12 @@
+2003-08-14  Per Bothner  <bothner@pbothner.com>
+
+	* cppfiles.c (stack_file):  Correctly pass return_at_eof parameter
+	to cpp_push_buffer.
+	* cpplex.c (_cpp_get_fresh_line):  Don't buffer->prev - handled
+	by return_at_eof check.  Always call _cpp_pop_buffer at end.
+
 2003-08-13  Per Bothner  <pbothner@apple.com>
 
-	[Compile-server will need to separate one-time and once-per-output-file
-	backend initialization.]
 	* regclass.c (init_reg_modes):  Make non-static.
 	Rename to init_reg_modes_once per new naming convention.
 	(init_regs):  Don't call init_reg_modes here.
