--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,6 +1,8 @@
-2003-08-04  Release Manager
+2003-08-13  Matthias Klose  <doko@debian.org>
 
-	* GCC 3.3.1 Released.
+	* fastjar.texi: License manual under the GPL.
+	* Makefile.am: Remove reference to fdl.texi
+	* Makefile.in: Regenerate
 
 2003-07-11  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
 
