--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,29 @@
+2003-08-14  Mark Mitchell  <mark@codesourcery.com>
+
+	* version.c (version_string): Use "prerelease" not "experimental".
+
+2003-08-11  James E Wilson  <wilson@tuliptree.org>
+
+	PR optimization/11319
+	PR target/10021
+	* alias.c (find_base_value, case REG): Return 0 not src if no base
+	found.
+
+2003-08-11  Kean Johnston  <jkj@sco.com>
+
+	* fixinc/inclhack.def (sco_math): Updated test text and select trigger
+	according to bkorb's review.
+	* fixinc/inclhack.def (sco_regset): Ditto.
+	* fixinc/inclhack.def (AAB_svr4_replace_byteorder): Remove all mach
+	lines so that this file is unconditionally replaced.
+	* fixinc/inclhack.def (sco_string): Use ansi/string.h as the first file
+	to check so that the Ultrix string.h check doesnt overwrite the test
+	case with its replacement text.
+	* fixinc/fixincl.x: Regenerated
+	* fixinc/tests/base/math.h: Updated sco_math result text
+	* fixinc/tests/base/ansi/string.h: New file.
+	* fixinc/tests/base/sys/regset.h: Compacted result text to fewer lines.
+
 2003-08-08  Roger Sayle  <roger@eyesopen.com>
 
 	* tree.h (get_identifier) Define a macro form of get_identifier
