builtins.c (fold_builtin): Use get_callee_fndecl.
        * builtins.c (fold_builtin): Use get_callee_fndecl.

        * attribs.c (decl_attributes): Rebuild the function pointer type after
        changing the target type.
        * tree.c (get_qualified_type): Also check that the attributes match.

        * c-typeck.c (build_array_ref): Also build ARRAY_REFs from
        INDIRECT_REFs of ARRAY_TYPE.

        * tree-ssa.c (tree_ssa_useless_type_conversion): Also strip
        conversions between pointer and reference types.

        * tree-dfa.c (get_stmt_operands): Just mark non-GIMPLE statements
        as unmodified.
        (find_referenced_vars): So we don't need to mark them here.

        * tree-inline.c (inline_data): Add retvar field.
        (declare_return_variable): Set it.
        (remap_decls): Use it.
        (expand_call_inline): Tweak.
cp/
        * typeck.c (build_array_ref): Also build ARRAY_REFs from
        INDIRECT_REFs of ARRAY_TYPE.

        * semantics.c (finish_id_expression): Unshare aliases.

From-SVN: r70591

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-08-19  Jason Merrill  <jason@redhat.com>
+
+	* builtins.c (fold_builtin): Use get_callee_fndecl.
+
+	* attribs.c (decl_attributes): Rebuild the function pointer type after
+	changing the target type.
+	* tree.c (get_qualified_type): Also check that the attributes match.
+
 2003-07-30  Jason Merrill  <jason@redhat.com>
 
 	* Makefile.in (bubblestrap): Don't require a previous full
