--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2003-08-21  Per Bothner  <pbothner@apple.com>
 
+	* c-lang.c (c_write_globals):  Remove function.
+	(LANG_HOOKS_WRITE_GLOBALS):  Set to c_objc_common_finish_file instead.
+	* objc/objc-lang.c (LANG_HOOKS_WRITE_GLOBALS):  Likewise.
+	* c-objc-common.c (c_objc_common_finish_file):  Also call
+	c_write_global_declarations here instead of removed c_write_globals.
+
 	* toplev.c (lang_dependent_init):  Remove parameter.
 	Don't call lang_hooks.init_eachsrc here.
 	Default dump_base_name to in_fnames[0].
